--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
         body {
             background-color: #0f172a;
             color: #f8fafc;
+            margin: 0;
+            padding: 0;
             overscroll-behavior: none;
             user-select: none;
             -webkit-tap-highlight-color: transparent;
-            padding-bottom: env(safe-area-inset-bottom);
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
+        #root {
+            min-height: 100vh;
+        }
+        /* 試管基礎樣式 */
         .tube-gradient {
             background: linear-gradient(180deg, rgba(255,255,255,0.05) 0%, rgba(255,255,255,0) 100%);
         }
@@ -34,33 +39,25 @@
             transition: background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
         }
         ::-webkit-scrollbar { display: none; }
-        
-        /* 增加試管的光影質感 */
-        .tube-glass {
-            box-shadow: inset 0 0 15px rgba(255,255,255,0.05), 0 5px 15px rgba(0,0,0,0.3);
-            backdrop-filter: blur(4px);
-        }
     </style>
 
-    <!-- 鎖定 React 18 避免 Error #31 -->
     <script type="importmap">
-    {
-      "imports": {
-        "react": "https://esm.sh/react@18.2.0",
-        "react-dom": "https://esm.sh/react-dom@18.2.0",
-        "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
-        "react/": "https://esm.sh/react@18.2.0/",
-        "react-dom/": "https://esm.sh/react-dom@18.2.0/"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
+  }
+}
+</script>
 <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <div id="root"></div>
-    <script type="module">
-        import "https://esm.sh/run/tsx/index.tsx";
-    </script>
+    <script type="module" src="index.tsx"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
